config/kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: find-unclaimed-court-money-ingress
  namespace: find-unclaimed-court-money-production
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: find-unclaimed-court-money-ingress-find-unclaimed-court-money-production-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
  - hosts:
    - find-unclaimed-court-money.apps.live.cloud-platform.service.justice.gov.uk
  - hosts:
    - find-unclaimed-court-money.service.justice.gov.uk
    secretName: find-unclaimed-court-money-cert
  rules:
  - host: find-unclaimed-court-money.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: find-unclaimed-court-money-service
            port:
              number: 3000
  - host: find-unclaimed-court-money.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: find-unclaimed-court-money-service
            port:
              number: 3000
